kubernetes_jenkins.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-kubernetes-deployment
spec:
  selector:
    matchLabels:
        app: springboot-kubernetes
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-kubernetes
    spec:
      containers:
        - name: springboot-kubernetes
          image: prashantdocker87/springboot-kubernetes:one
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
 ---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-springboot-service
spec:
  selector:
    # Should match the template.metadata.labels.app value
    app: springboot-kubernetes
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 8080
      nodePort: 30009
      name: http
  type: NodePort
