kubernetes_service_onpremise.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kubernetes-springboot-service
spec:
  selector:
    # Should match the template.metadata.labels.app value
    app: springboot-kubernetes
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 8080
      nodePort: 30009
      name: http
  type: NodePort
